--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,3 +1,17 @@
 @import '/src/shared/scss/variables';
 
-.notFound {}
+.notFound {
+  position: relative;
+  height: 100%;
+}
+
+.box {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 350px;
+  height: 540px;
+  margin: auto;
+}
