--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,10 @@
 @import '/src/shared/scss/variables';
 
 .header {
+  padding: 55px 0;
   text-align: center;
+}
+
+.globalIcon {
+  font-size: 48px;
 }
