--- a/src/shared/scss/main.scss
+++ b/src/shared/scss/main.scss
@@ -19,3 +19,10 @@ body {
   line-height: 27px;
   color: $color-main;
 }
+
+// @font-face {
+//   font-family: 'Example';
+//   src: url('/src/shared/assets/fonts/Example-VariableFont.ttf') format('truetype');
+//   font-weight: 100 1000;
+//   font-stretch: 25% 151%;
+// }
