--- a/templates/default/TemplateName.module.scss
+++ b/templates/default/TemplateName.module.scss
@@ -1,3 +1,5 @@
-@import '/src/shared/scss/variables';
+@import '/src/shared/scss/_variables.scss';
 
-.templateName {}
+.templateName {
+  width: 100%;
+}
