--- a/src/shared/scss/main.scss
+++ b/src/shared/scss/main.scss
@@ -13,7 +13,9 @@ body {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
   font-weight: 400;
   font-size: 16px;
   line-height: 27px;
